--- a/client/app/index.html
+++ b/client/app/index.html
@@ -11,8 +11,10 @@
         <link rel="author" content="Emerson Estrella" href="https://plus.google.com/u/0/106482397345579796333">
         <meta name="viewport" content="width=device-width">
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-        <!-- build:css(.tmp) styles/main.css -->
+        <!-- build:css styles/bootstrap.css -->
         <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
+        <!-- endbuild -->
+        <!-- build:css(.tmp) styles/main.css -->
         <link rel="stylesheet" href="styles/main.css">
         <!-- endbuild -->
     </head>
